<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBatteryActivity"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="2"
            android:hint="ID"
            android:inputType="number"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="4"
            android:hint="@string/Capacity"
            android:inputType="number"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/textView_mAh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mAh"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Discharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="3"
            android:hint="@string/Discharge"
            android:inputType="number"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/textView_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/C"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Cells"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="1"
            android:hint="@string/Cells"
            android:inputType="number"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/textView_S"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/S"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Switch
        android:id="@+id/switch_Advanced"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/Advanced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout_Advanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/switch_Advanced">

        <EditText
            android:id="@+id/editText_Brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/BrandName"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_textCurrVolt"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CurrentVoltage" />

            <EditText
                android:id="@+id/editText_CurrentVoltage"
                android:layout_width="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="1"
                android:inputType="numberDecimal"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/textView_V"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/V" />

            <TextView
                android:id="@+id/textView_textTimesUsed"
                android:layout_width="31dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TimesUsed" />

            <EditText
                android:id="@+id/editText_TimesUsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="2"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textView_State"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CurrentState" />

            <Spinner
                android:id="@+id/spinner_State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:id="@+id/textView_Connector"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ConnectorType" />

            <Spinner
                android:id="@+id/spinner_Connector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView_textBuyDate"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/BuyDate" />

            <EditText
                android:id="@+id/editText_BuyDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView_textLastUsed"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LastUsed" />

            <EditText
                android:id="@+id/editText_LastUsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView_textLastCharged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LastCharged" />

            <EditText
                android:id="@+id/editText_LastCharged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancel" />

        <Button
            android:id="@+id/button_Accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Accept" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>